@@ -33,6 +33,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
  <notes>
+* [jan] Fall back to sort by name if sort criteria are equal.
 * [jan] Remove configuration option for database table.
 * [jan] Improve priority display in basic view.
 * [jan] Display task list background color in basic view.
@@ -1626,6 +1627,7 @@
    <date>2015-01-16</date>
    <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
    <notes>
+* [jan] Fall back to sort by name if sort criteria are equal.
 * [jan] Remove configuration option for database table.
 * [jan] Improve priority display in basic view.
 * [jan] Display task list background color in basic view.
